--- a/habits/templates/habits/base.html
+++ b/habits/templates/habits/base.html
@@ -1,9 +1,10 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}Habit Tracker{% endblock %}</title>
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+      <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
     <header>
