--- a/habits/templates/habits/base.html
+++ b/habits/templates/habits/base.html
@@ -10,7 +10,10 @@
     <header>
         <h1><a href="/">Habit Tracker</a></h1>
         {% if user.is_authenticated%}
-            <p>Hola, {{ user.username }} | <a href="{% url 'logout' %}">Cerrar sesión</a></p>  
+            <p>Hola, {{ user.username }} | <form method="post" action="{% url 'logout' %}" style="display:inline;">
+    {% csrf_token %}
+    <button type="submit" style="background:none; border:none; color:blue; cursor:pointer;">Cerrar sesión</button>
+</form></p>  
         {% else %}
             <a href="{% url 'login' %}">Iniciar Sesión</a>
             <a href="{% url 'register' %}">Registrarme</a>
