--- a/habits/templates/habits/home.html
+++ b/habits/templates/habits/home.html
@@ -1,5 +1,8 @@
 {% extends 'habits/base.html' %}
 {% load extras %}
+{% load static %}
+{% load custom_filters %}
+
 
 
 {% block title %}Mis Hábitos{% endblock %}
@@ -12,13 +15,25 @@
             <li>
                 <strong>{{ habit.name }}</strong> - {{ habit.get_frequency_display }}
                        <td>
-    <a href="{% url 'editar_habit' habit.id %}">✏️ Editar</a> |
-    <a href="{% url 'eliminar_habit' habit.id %}">🗑 Eliminar</a>
-</td>
+                            <a href="{% url 'editar_habit' habit.id %}">✏️ Editar</a> |
+                            <a href="{% url 'eliminar_habit' habit.id %}">🗑 Eliminar</a>
+                        </td>
                 <br>
+                
                 <small>{{ habit.description }}</small>
                 <table border="1" style="margin-top: 1rem," >
              
+                    <div class="progress-container">
+                    <div class="progress-bar"
+                        style="width: {{ porcentajes|dict_get:habit.id }}%;
+                                background-color:
+                                    {% if porcentajes|dict_get:habit.id >= 80 %}#4caf50
+                                    {% elif porcentajes|dict_get:habit.id >= 50 %}#ffeb3b
+                                    {% else %}#f44336{% endif %};">
+                        {{ porcentajes|dict_get:habit.id }}%
+                    </div>
+                </div>
+
 
                     <tr>
                         <th>Día</th>
