--- a/habits/templates/habits/base.html
+++ b/habits/templates/habits/base.html
@@ -7,20 +7,30 @@
     <title>{% block title %}Habit Tracker{% endblock %}</title>
       <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
-<body>
+<body class="{% if request.COOKIES.dark_mode == 'true' %}dark-mode{% endif %}">
+
     <header>
-        <h1><a href="/">Habit Tracker</a></h1>
-        {% if user.is_authenticated%}
-            <p>Hola, {{ user.username }} | <form method="post" action="{% url 'logout' %}" style="display:inline;">
+        <form method="post" action="{% url 'toggle_dark_mode' %}">
     {% csrf_token %}
+    <button type="submit" class="btn-toggle-dark">🌓</button>
+</form>
+
+    <h1><a href="{% url 'home' %}">Mis Hábitos</a></h1>
+    
+    <div class="user-actions">
+        {% if user.is_authenticated %}
+            <span class="username">Hola, {{ user.username }}</span>
+            <form action="{% url 'logout' %}" method="post">
+                {% csrf_token %}
     <button type="submit" style="background:none; border:none; color:blue; cursor:pointer;">Cerrar sesión</button>
-</form></p>  
+            </form>
         {% else %}
-            <a href="{% url 'login' %}">Iniciar Sesión</a>
-            <a href="{% url 'register' %}">Registrarme</a>
-        {% endif %} 
-        <hr> 
-    </header>
+            <a href="{% url 'login' %}">Iniciar sesión</a>
+            <a href="{% url 'register' %}">Registrarse</a>
+        {% endif %}
+    </div>
+</header>
+
     <main>
         {% block content %}
         {% endblock %}
